little problem with display